--- a/microblog/templates/cadastro.html
+++ b/microblog/templates/cadastro.html
@@ -1,24 +1,26 @@
 <!DOCTYPE html>
 
 <html lang="pt-br">
-    =======
+   
 <html lang="en">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title> SITE TOPICOS </title>
+    <title>Documentos </title>
+
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
 </head>
 <body>
     <div class="container">
-        <h1>Contato</h1>
+        <h1>Bem Vindo ao seu Cadastro</h1>
 <div>
-    <p>Fone: {{tel}} </p>
+    <p>name: {{nome}} </p>
+
     </div>
 
-        <form action="/contato" method="POST">
+        <form action="/cadastro" method="POST">
             <div class="form-group">
                 <label for="nome">Nome</label>
                 <input type="text" class="form-control" id="nome" name="nome">
